doc/grammar.bnf
# BNF of ULT

program ::= { statement; }

statement ::= assinging | if_statement | goto_statement | expression |
              label: statement

assinging ::= variable = expression

expression ::= unar_operation expression | (expression) |
               expression binar_operation expression |
               expression arg_list | literal | $variable

variable ::= identifier{ \[ expression \] }

literal ::= string | int | float | code_block

code_block ::= \{ program \}

arg_list ::= ( [ expression { , expression } ] )

goto_statement ::= goto label

label ::= @identifier

identifier ::= letter name | _ name

name ::= letter name | digit name | _ name |

if_statement ::= if ( expression ) code_block
